added signin/out code to application controller

--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @category do |f| %>
+<%= form_for [:admin, @category] do |f| %>
   <p>
     <%= f.label "Category ID:" %>
     <% if @category.id.nil? %>
