--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -16,7 +16,7 @@
     <div class="col-xs-10">
       <div class="text-center"><h2>Viking Store Users</h2></div>
       <div class="col-xs-offset-3 col-xs-6">
-        <%= link_to "Create Category", new_category_path, class: "btn btn-primary btn-lg btn-block" %>
+        <%= link_to "Create Category", new_admin_category_path, class: "btn btn-primary btn-lg btn-block" %>
       </div>
       <div class="col-xs-12 text-center">
         <table class="table table-striped">
@@ -32,9 +32,9 @@
             <tr>
               <td><%= category.id %></td>
               <td><%= category.name %></td>
-              <td><%= link_to "SHOW", category %></td>
-              <td><%= link_to "EDIT", edit_category_path(category) %></td>
-              <td><%= link_to "DELETE", category, method: :delete, data: {confirm: "Are you sure?"} %></td>
+              <td><%= link_to "SHOW", admin_category_path(category) %></td>
+              <td><%= link_to "EDIT", edit_admin_category_path(category) %></td>
+              <td><%= link_to "DELETE", admin_category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
             </tr>
           <% end %>
     
