--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -50,7 +50,7 @@
               <tr>
                 <td><%= order.id %></td>
                 <td><%= order.user_id %></td>
-                <td><%= order.shipping_add.street_shipping_add %></td>
+                <td><%= order.shipping_add.street_address %></td>
                 <td><%= order.shipping_add.city.name %></td>
                 <td><%= order.shipping_add.state.name %></td>
                 <td><%= order.total_value %></td>
@@ -61,9 +61,9 @@
                     <% end %>
                 </td>
                 <td><%= order.created_at.strftime("%y-%m-%d") %></td>
-                <td><%= link_to "SHOW", user_order_path(order.user_id, order) %></td>
-                <td><%= link_to "EDIT", edit_user_order_path(order.user_id, order) %></td>
-                <td><%= link_to "DELETE", user_order_path(order.user_id, order), method: :delete, data: {confirm: "Are you sure?"} %></td>
+                <td><%= link_to "SHOW", admin_user_order_path(order.user_id, order) %></td>
+                <td><%= link_to "EDIT", edit_admin_user_order_path(order.user_id, order) %></td>
+                <td><%= link_to "DELETE", admin_user_order_path(order.user_id, order), method: :delete, data: {confirm: "Are you sure?"} %></td>
               </tr>
             <% end %>
           </table>
