--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @product do |f| %>
+<%= form_for [:admin, @product] do |f| %>
   <p>
     <%= f.label "Product ID" %>
     <% if @product.id.nil? %>
