--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -16,7 +16,7 @@
     <div class="col-xs-10">
       <div class="text-center"><h2>Product</h2></div>
       <div class="col-xs-offset-3 col-xs-6">
-        <%= link_to "Create Product", new_product_path, class: "btn btn-primary btn-lg btn-block" %>
+        <%= link_to "Create Product", new_admin_product_path, class: "btn btn-primary btn-lg btn-block" %>
       </div>
       <div class="col-xs-12 text-center">
         <div class="table-responsive scrollable-table">
@@ -37,10 +37,10 @@
                 <td><%= product.id %></td>
                 <td><%= product.name %></td>
                 <td><%= product.price %></td>
-                <td><%= link_to @product_categories[product.id-1].name, category_path(@product_categories[product.id-1].id) %></td>
-                <td><%= link_to "SHOW", product %></td>
-                <td><%= link_to "EDIT", edit_product_path(product) %></td>
-                <td><%= link_to "DELETE", product, method: :delete, data: {confirm: "Are you sure?"} %></td>
+                <td><%= link_to product.category.name, admin_category_path(product.category.id) %></td>
+                <td><%= link_to "SHOW", admin_product_path(product) %></td>
+                <td><%= link_to "EDIT", edit_admin_product_path(product) %></td>
+                <td><%= link_to "DELETE", admin_product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
               </tr>
             <% end %>
           </table>
