--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for [:admin, @user] do |f| %>
   <p>
     <%= f.label "First Name" %>
     <%= f.text_field :first_name %>
