--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
     <div class="col-xs-10">
       <div class="text-center"><h2>Viking Store Users</h2></div>
       <div class="col-xs-offset-3 col-xs-6">
-        <%= link_to "Create User", new_user_path, class: "btn btn-primary btn-lg btn-block" %>
+        <%= link_to "Create User", new_admin_user_path, class: "btn btn-primary btn-lg btn-block" %>
       </div>
       <div class="col-xs-12 text-center">
         <div class="table-responsive scrollable-table">
@@ -53,9 +53,9 @@
                       <%= @last_date[user.id][0].date.strftime("%Y-%m-%d") %>
                     <% end %>
                   </td>
-                  <td><%= link_to "Show", user %></td>
-                  <td><%= link_to "Edit", edit_user_path(user) %></td>
-                  <td><%= link_to "Delete", user, method: :delete, data: {confirm: "Are you sure?"} %></td>
+                  <td><%= link_to "Show", admin_user_path(user) %></td>
+                  <td><%= link_to "Edit", edit_admin_user_path(user) %></td>
+                  <td><%= link_to "Delete", admin_user_path(user), method: :delete, data: {confirm: "Are you sure?"} %></td>
                 </tr>
               <% end %>
             </tr>
