--- a/app/views/admin/addresses/index.html.erb
+++ b/app/views/admin/addresses/index.html.erb
@@ -48,15 +48,19 @@
             <% @addresses.each do |address| %>
               <tr>
                 <td><%= address.id %></td>
-                <td><%= address.user.first_name %></td>
+                <% unless address.user.nil? %>
+                  <td><%= address.user.first_name %></td>
+                <% end %>
                 <td><%= address.street_address %></td>
                 <td><%= address.city.name %></td>
                 <td><%= address.state.name %></td>
                 <td><%= address.orders.length %></td>
                 <td><%= address.created_at.strftime("%y-%m-%d") %></td>
-                <td><%= link_to "SHOW", admin_user_address_path(address.user, address) %></td>
-                <td><%= link_to "EDIT", edit_admin_user_address_path(address.user, address) %></td>
-                <td><%= link_to "DELETE", admin_user_address_path(address.user, address), method: :delete, data: {confirm: "Are you sure?"} %></td>
+                <% unless address.user.nil? %>
+                  <td><%= link_to "SHOW", admin_user_address_path(address.user, address) %></td>
+                  <td><%= link_to "EDIT", edit_admin_user_address_path(address.user, address) %></td>
+                  <td><%= link_to "DELETE", admin_user_address_path(address.user, address), method: :delete, data: {confirm: "Are you sure?"} %></td>
+                <% end %>
               </tr>
             <% end %>
           </table>
