added cart controller

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -46,7 +46,7 @@
     </div>
 
     <div class="row">
-      <% products = procucts_for_category(params[:product_category]) %>
+      <% products = products_for_category(params[:product_category]) %>
       <% products.each do |product| %>
         <div class="col-sm-4">
           <div class="panel panel-default">
