--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,8 +13,13 @@
           <li><img alt="my boat" src="/assets/logo_ship_90.png"></li>
           <li><ul class='nav'>
             <li><a href="#">Cart</a></li>
-            <li><a href="#">Sign In</a></li>
-          </ul></li>
+            <% if signed_in_user? %>
+              <li><%= link_to "Sign In", new_session_path %></li>
+            <% else %>
+              <li><%= link_to "Sign Out", session_path, method: "DELETE" %></li>
+            <% end %>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
@@ -33,8 +38,6 @@
 
 <section id="page-content">
   <div class="container">
-
-
       <div class="col-sm-10">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -47,7 +50,7 @@
           </div>
           <p><%= "#{@product.price}" %></p>
           <div class="panel-footer">
-            <%= form_for :shopping_cart do |f| %>
+            <%= form_for @product do |f| %>
               <%= f.submit "Add to Cart" %>
             <% end %>
           </div>
