--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
         <ul class="nav navbar-nav">
           <li><img alt="my boat" src="/assets/logo_ship_90.png"></li>
           <li><ul class='nav'>
-            <li><a href="#">Cart</a></li>
+            <li><%= link_to "Cart", cart_path %></li>
 
             <% if signed_in_user? %>
               <li><%= link_to "Sign Out", session_path, method: "DELETE" %></li>
